--- a/style1.css
+++ b/style1.css
@@ -83,7 +83,7 @@ body::after {
     right: 50px;
     width: 500px;
     height: 100%;
-    background: url('img.png') no-repeat center center/contain;
+    background: url('img.jpeg') no-repeat center center/contain;
     opacity: 0.8;
 }
 
